--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Coding Mini Game</title>
+	<title>JavaScript Learning Game</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
-   <h1>Coding Mini Game</h1>
+<h1>JavaScript Learning Game</h1>
+
 <section id="one">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
-		   <p class="first">// Welcome! To start, write your name in the console:</p>
+		   <p class="first">// Welcome! We'll be learning some of the basics of JavaScript.</p><br>
+		   <p class="first">// To start, write your name in the console:</p>
 		   <p class="second"><span class="blue">console.log</span>(<span class="yellow">"Hello <input type="text" class="input" autofocus></input>!"</span>)</p>
-		   <button class="run">Run</button>	
-		</div>	
+		   <button class="run">Run</button>
 	   </div>
 	</div>
 </section>
@@ -23,11 +24,9 @@
 <section id="two">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 		   <p class="first">// Now type your name into the alert and see what happens:</p>
 		   <p class="second"><span class="blue">alert</span>(<span class="yellow">"Hello <input type="text" class="input" autofocus></input>!"</span>)</p>
-		   <button class="run bTwo">Run</button>	
-		</div>	
+		   <button class="run bTwo">Run</button>
 	   </div>
 	</div>
 </section>
@@ -35,12 +34,10 @@
 <section id="three">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 		   <p class="first">// Variables are containers for storing data values. You start by declaring a variable with the <span class="blue">var</span> or the <span class="blue">let</span> keyword, followed by the name you give to the variable:</p>
 		   <p class="second"><span class="blue">let</span> myVariable <span class="pink">=</span> value;</p>
 		   <p class="first">// Variables hold values that have different data types. Let's see a few of them:</p>
-		   <button class="run bTwo">Next</button>	
-		</div>	
+		   <button class="run bTwo">Next</button>
 	   </div>
 	</div>
 </section>
@@ -48,15 +45,12 @@
 <section id="four">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
-		   <p class="first">// String: Stores text, such as "Hello" or "Jack". String values are surrounded by double quotes.</p><br>
+		   <p class="first">// Strings store text, such as "Hello" or "Jack". String values are surrounded by double quotes.</p><br>
 		   <p class="first">// Select the correct string value:</p>
 		   <p class="second"><input type="radio" value="incorrect" name="string" id="string-incorrect"> <span class="blue">let</span> userName <span class="pink">=</span> <span class="yellow">Jane</span>;</p>
 
 		   <p class="second"><input type="radio" value="correct" name="string" id="string-correct"> <span class="blue">let</span> userName <span class="pink">=</span> <span class="yellow">"Jane"</span>;</p>
-		 <!-- <span style="color: #9a5cff;"> --> 
-		   <button class="run bTwo">Run</button>	
-		</div>	
+		   <button class="run bTwo">Run</button>
 	   </div>
 	</div>
 </section>
@@ -64,13 +58,11 @@
 <section id="five">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
-		   <p class="first">// Number: Stores whole numbers, such as 12 or -12. Numbers don't have quotes around them.</p><br>
+		   <p class="first">// Numbers store whole numbers, such as 12 or -12. Numbers don't have quotes around them.</p><br>
 		    <p class="first">// Select the correct number value:</p>
 		   <p class="second"><input type="radio" value="incorrect" name="number" id="number-correct"> <span class="blue">let</span> userAge <span class="pink">=</span> <span class="purple">25</span>;</p>
 		   <p class="second"><input type="radio" value="correct" name="number" id="number-incorrect"> <span class="blue">let</span> userAge <span class="pink">=</span> <span class="purple">"25"</span>;</p>
-		   <button class="run bTwo">Run</button>	
-		</div>	
+		   <button class="run bTwo">Run</button>
 	   </div>
 	</div>
 </section>
@@ -78,13 +70,11 @@
 <section id="six">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
-		   <p class="first">// Boolean: Stores values with two states- true or false. They are special keywords that don't need quote marks.</p><br>
+		   <p class="first">// Booleans store values with two states- true or false. They are special keywords that don't need quote marks.</p><br>
 		    <p class="first">// Select the correct boolean value:</p>
-		   <p class="second"><input type="radio" value="incorrect" name="boolean" id="boolean-incorrect"> <span class="blue">let</span> userValid <span class="pink">=</span> <span class="purple">"true"</span>;</p>
+		   <p class="second"><input type="radio" value="incorrect" name="boolean" id="boolean-incorrect"> <span class="blue">let</span> userValid <span class="pink">=</span> <span class="yellow">"true"</span>;</p>
 		   <p class="second"><input type="radio" value="correct" name="boolean" id="boolean-correct"> <span class="blue">let</span> userValid <span class="pink">=</span> <span class="purple">true</span>;</p>
-		   <button class="run bTwo">Run</button>	
-		</div>	
+		   <button class="run bTwo">Run</button>
 	   </div>
 	</div>
 </section>
@@ -92,7 +82,6 @@
 <section id="seven">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 	   	   <p class="first">// That's it for now about variables and values. Let's move on to operators.</p>
 	   	   <br>
 		   <p class="first">// Arithmetic operators are used to perform common mathematical operations. Here are a few simple ones:</p>
@@ -125,8 +114,7 @@
              </tr>
            </table>
 
-		   <button class="run bTwo">Next</button>	
-		</div>	
+		   <button class="run bTwo">Next</button>
 	   </div>
 	</div>
 </section>
@@ -134,7 +122,6 @@
 <section id="eight">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 	   		<p class="second"><span class="blue">let</span> number<span class="pink"> = </span><span class="purple">5</span>;</p>
             <div class="container">
 	   		<p class="second"><span class="blue">let</span> newNumber<span class="pink"> = </span>number <span class="pink">+</span></p>
@@ -146,8 +133,7 @@
 		       <div id="item-two" draggable="true">2</div>
 		       <div id="item-five" draggable="true">5</div>
 		   </div>
-		   <button class="run bTwo">Run</button>	
-		</div>	
+		   <button class="run bTwo">Run</button>
 	   </div>
 	</div>
 </section>
@@ -155,7 +141,6 @@
 <section id="nine">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 		   <p class="first">//Comparison operators are used to compare two values:</p>
 
            <table>
@@ -196,8 +181,7 @@
              </tr>
            </table>
 
-		   <button class="run bTwo">Next</button>	
-		</div>	
+		   <button class="run bTwo">Next</button>
 	   </div>
 	</div>
 </section>
@@ -205,11 +189,9 @@
 <section id="ten">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 		   <p class="first">// Enter two numbers and see if the result is true or false.</p>
            <p class="second"><span class="blue">console.log</span>(<span class="pink"><input type="text" class="comparison-input input" id="comp-one" autofocus></input><=  <input type="text" class="comparison-input input" id="comp-two" autofocus></input></span>)</p>
-		   <button class="run bTwo">Run</button>	
-		</div>	
+		   <button class="run bTwo">Run</button>
 	   </div>
 	</div>
 </section>
@@ -217,13 +199,11 @@
 <section id="eleven">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 	   	   <p class="first">// Let's move on to Arrays. Arrays are used to store multiple values in a single variable. For example:</p>
 	   	   <br>
 		   <p class="second"><span class="blue">let</span> shoppingList <span class="pink">=</span> [<span class="yellow">"bread"</span>, <span class="yellow">"milk"</span>, <span class="yellow">"shampoo"</span>];</p>
 		   <p class="first">// There are different methods that can be used to edit an array. We will be looking at the <span class="blue">push</span><span style="color:white;">()</span> and <span class="blue">pop</span><span style="color:white;">()</span> methods.</p>
-		   <button class="run bTwo">Next</button>	
-		</div>	
+		   <button class="run bTwo">Next</button>
 	   </div>
 	</div>
 </section>
@@ -231,7 +211,6 @@
 <section id="twelve">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 	   	   <p class="first">// The <span class="blue">push</span><span style="color:white;">()</span> method adds new items to the end of an array. Push a new item and see what happens:</p>
 	   	   <br>
 		   <p class="second"><span class="blue">let</span> shoppingList <span class="pink">=</span> [<span class="yellow">"bread"</span>, <span class="yellow">"milk"</span>, <span class="yellow">"shampoo"</span>];</p>
@@ -241,7 +220,6 @@
            <br>
            <br>
 		   <p class="second array-list"><span class="blue">let</span> shoppingList <span class="pink">=</span> [<span class="yellow">"bread"</span>, <span class="yellow">"milk"</span>, <span class="yellow">"shampoo"</span>, <span class="yellow" id="new-item">"</span><span class="yellow">"</span>];</p>
-		</div>	
 	   </div>
 	</div>
 </section>
@@ -249,7 +227,6 @@
 <section id="thirteen">
 	 <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
 	   	   <p class="first">// The <span class="blue">pop</span><span style="color:white;">()</span> method removes the last element of an array.</p>
 	   	   <br>
 		   <p class="second"><span class="blue">let</span> colors <span class="pink">=</span> [<span class="yellow">"blue"</span>, <span class="yellow">"pink"</span>, <span class="yellow">"yellow"</span>, <span class="yellow">"purple"</span>];</p>
@@ -259,8 +236,21 @@
            <br>
            <br>
 		   <p class="second pop"><span class="blue">let</span> colors <span class="pink">=</span> [<span class="yellow">"blue"</span>, <span class="yellow">"pink"</span>, <span class="yellow">"yellow"</span>];</p>
+	   </div>
+	</div>
+</section>
 
-		</div>	
+<section id="fourteen">
+	 <div class="top-bar">JavaScript</div>
+	   <div class="coding-box">
+	   	   <p class="first">// To find a specific element in an array, you can refer to it's index number.</p>
+	   	   <br>
+	   	   <p class="first">Keep in mind: Array indexes start with 0. [0] is the first element. [1] is the second element.</p>
+	   	   <br>
+		   <p class="second"><span class="blue">let</span> fruit <span class="pink">=</span> [<span class="yellow">"apple"</span>, <span class="yellow">"banana"</span>, <span class="yellow">"mango"</span>, <span class="yellow">"kiwi"</span>, <span class="yellow">"melon"</span>];</p>
+
+		   <p class="second"><span class="blue">let</span> pickedFruit <span class="pink">=</span> fruit[<input type="text" class="fruit input" autofocus></input>];</p>
+		   <button class="run bTwo">Run</button>
 	   </div>
 	</div>
 </section>
@@ -268,10 +258,9 @@
 <section id="end">
 	  <div class="top-bar">JavaScript</div>
 	   <div class="coding-box">
-	   	<div class="first-box">
-		   <p class="first">// That's it for now! </p>
-		  	
-		</div>	
+		   <p class="first">// That's it for now! </p><br>
+		   <p class="first">// Now you know some of the basics and are ready to move on to become a pro coder :)</p>
+		   <img src="coding.gif" width="300px" height="170px">
 	   </div>
 	</div>
 </section>
