fixing minor bugs

--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 	   	   <p class="first">// The <span class="blue">pop</span><span style="color:white;">()</span> method removes the last element of an array.</p>
 	   	   <br>
 		   <p class="second"><span class="blue">let</span> colors <span class="pink">=</span> [<span class="yellow">"blue"</span>, <span class="yellow">"pink"</span>, <span class="yellow">"yellow"</span>, <span class="yellow">"purple"</span>];</p>
-
-		   <p class="second">shoppingList.<span class="blue">pop</span>();</p>
+           <p class="first">// Click run to see what happens:</p>
+		   <p class="second">colors.<span class="blue">pop</span>();</p>
 		   <button class="run bTwo">Run</button>	
            <br>
            <br>
@@ -248,7 +248,7 @@
 	   	   <p class="first">Keep in mind: Array indexes start with 0. [0] is the first element. [1] is the second element.</p>
 	   	   <br>
 		   <p class="second"><span class="blue">let</span> fruit <span class="pink">=</span> [<span class="yellow">"apple"</span>, <span class="yellow">"banana"</span>, <span class="yellow">"mango"</span>, <span class="yellow">"kiwi"</span>, <span class="yellow">"melon"</span>];</p>
-
+           <p class="first">// Type a number into the square brackets to find a specific fruit in the fruit array list:</p>
 		   <p class="second"><span class="blue">let</span> pickedFruit <span class="pink">=</span> fruit[<input type="text" class="fruit input" autofocus></input>];</p>
 		   <button class="run bTwo">Run</button>
 	   </div>
